tests/snapshots/e2e_head__e2e_head_mixed_arrays_json__pseudo__n200.snap
---
source: tests/e2e_head.rs
expression: stdout
---
{
  "matrix": [
    [ … ],
    [ … ],
    [ … ]
  ],
  "strings": [
    "…",
    …
    "…",
    …
    "…"
    …
  ],
  "objects": [
    { … }
    …
  ],
  "deep": [ … ]
}
